fixed footer spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -233,7 +233,7 @@ article.hentry{
    Footer
    ========================================================================== */
 
-.content-info { }
+.content-info { padding-top: 20px }
 
 
 
